packages/sdk-react/src/components/receivables/InvoiceDetails/CreateReceivable/sections/components/InvoicePreview.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');

.invoice-preview {
  background-color: white;
  display: flex;
  flex-direction: column;
  margin: 25px;
  height: auto;
  min-height: auto;
  aspect-ratio: 0.7071;
  padding: 1.5em 5em;
  --table-cell-padding-x: 10.1pt;
  --table-cell-padding-y: 12.2pt;
  --totals-table-cell-padding-y: 5.6pt;
  --footer-height: 50mm;
  --page-counter-height: 12mm;
  --totals-table-font-size: 10pt;
  --totals-table-accent-font-size: 12pt;

  font-family: 'Inter', 'Helvetica Neue', 'Helvetica', Helvetica, Arial,
    sans-serif;
  -webkit-font-smoothing: antialiased;
  color: #111111;
  font-size: 10px;
  line-height: 12px;
  font-weight: 400;
  isolation: isolate;
}

@media screen and (max-height: 720px) {
  .invoice-preview {
    margin-top: 0;
  }
}

.invoice-preview img,
.invoice-preview picture,
.invoice-preview video,
.invoice-preview canvas,
.invoice-preview svg {
  display: block;
  max-width: 100%;
}

.invoice-preview input,
.invoice-preview button,
.invoice-preview textarea,
.invoice-preview select {
  font: inherit;
}

.invoice-preview p,
.invoice-preview h1,
.invoice-preview h2,
.invoice-preview h3,
.invoice-preview h4,
.invoice-preview h5,
.invoice-preview h6 {
  overflow-wrap: break-word;
}

.invoice-preview h3 {
  color: var(--theme-neutrals-bold-10-light-black-bd, #292929);
  font-size: 25px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
}

.invoice-preview article {
  flex-grow: 1;
}

.invoice-preview ul {
  list-style: none;
  padding: 0;
}

.invoice-preview .line-items-table {
  width: 100%;
}

.invoice-preview .line-items-table tr.spacer {
  display: none;
}

.invoice-preview .line-items-table th {
  color: rgba(112, 112, 112, 1);
  padding-bottom: 8pt;
  font-size: 8px;
  font-weight: 400;
  white-space: nowrap;
  text-align: left;
  line-height: normal;
  text-transform: uppercase;
}

/* 2 rules below improve the balance of the table while discount row isn't present */
.invoice-preview .line-items-table th:last-of-type,
.invoice-preview .line-items-table td:last-of-type {
  text-align: right;
}

.invoice-preview .line-items-table th:nth-of-type(3),
.invoice-preview .line-items-table td:nth-of-type(3) {
  text-align: center;
}

.invoice-preview .line-items-table td {
  padding: 12px;
  vertical-align: top;
  padding-left: 0;
}

.line-items-table th:last-of-type,
.line-items-table td:last-of-type {
  padding-right: var(--table-cell-outer-padding-x, var(--table-cell-padding-x));
}

.line-items-table tbody td {
  font-size: 10px;
  line-height: 1.3;
  font-weight: 400;
  color: var(--theme-neutrals-30-dark-grey, #3b3b3b);
  border: 1px rgb(223, 223, 223);
  border-top-style: solid;
}

.line-items-table thead {
  display: table-header-group;
}

.line-items-table tfoot {
  display: table-footer-group;
}

th.line-items-table__fixed-item {
  width: 46pt;
}

.totals-table {
  margin-top: 8pt;
}

.totals-table tr,
.totals-table td,
.totals-table th {
  break-inside: avoid;
}

.totals-table td {
  padding: var(--totals-table-cell-padding-y, 5.6pt) var(--table-cell-padding-x);
  color: var(--theme-neutrals-bold-10-light-black-bd, #292929);
  font-size: 10px;
  font-style: normal;
  font-weight: 400;
}

.totals-table td:last-child {
  padding-right: var(--table-cell-outer-padding-x, var(--table-cell-padding-x));
  text-align: right;
  white-space: nowrap;
}

.line-items-table .no-items td {
  padding: 0;
  border-bottom-style: solid;
  padding-left: 0;
}

.line-items-table tr:last-child td {
  border-bottom-style: solid;
}

.totals-table .total td {
  font-size: 12px;
  font-weight: 600;
  background: var(--totals-table-total-cell-background, transparent);
  color: var(--totals-table-total-cell-color, inherit);
}
.totals-table:has(.amount_due) .total td {
  font-weight: 400;
  background: transparent;
  color: var(--theme-neutrals-bold-10-light-black-bd, #292929);
}

.totals-table .amount_due td {
  font-weight: 600;
  background: var(--totals-table-total-cell-background, transparent);
  color: var(--totals-table-total-cell-color, inherit);
}

.invoice-preview footer {
  display: flex;
  flex-direction: column;
  break-inside: avoid;
  margin-top: auto;
}

.invoice-preview footer .pre-footer-row {
  display: inline-flex;
  flex-direction: row;
  justify-content: space-between;
  padding-bottom: 5mm;
}

.invoice-preview footer aside h3 {
  margin-bottom: 4pt;
}

.invoice-preview footer {
  border-top: 0.26px solid #a6abb7;
  font-size: 8px;
  line-height: 1.41;
  font-weight: 400;
}

.invoice-preview footer > section {
  box-sizing: border-box;
  display: flex;
  flex-flow: row;
  justify-content: space-between;
  gap: 20mm;
  --margin-top: 5mm;
  --margin-bottom: 0mm;
  margin-top: var(--margin-top);
  margin-bottom: var(--margin-bottom);
  height: calc(
    var(--footer-height) - var(--margin-top) - var(--margin-bottom) -
      var(--page-counter-height)
  );
  text-align: left;
  font-style: normal;
  font-weight: 400;
  color: var(--theme-neutrals-bold-10-light-black-bd, #292929);
}

.invoice-preview footer > section h3 {
  margin-bottom: 2.5pt;
}

.invoice-preview .footer-aside {
  display: flex;
  font-size: 8px;
  line-height: 1.5;
}

.invoice-preview .footer-aside__start {
  flex-flow: column;
  width: 250px;
}

.invoice-preview .footer-aside__end {
  flex-flow: row;
  justify-content: flex-end;
  flex-grow: 1;
  gap: 5mm;
}

.invoice-preview .footer-aside > aside {
  display: flex;
  flex-flow: column;
}

.invoice-preview .footer-aside__end > aside:first-of-type {
  flex-grow: 1;
}
/* ... */

